dxscale/core/services/AuditService/entities/Service_Framework_Audit__c/objects/Service_Framework_Audit__c/Service_Framework_Audit__c.object-meta.xml
<CustomObject>
    <description>Audited messages from the Services Framework</description>
    <label>Service Framework Audit</label>
    <nameField>
        <displayFormat>SFA-{00000000}</displayFormat>
        <label>Service Framework Audit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Framework Audit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>