dxscale/core/services/AuditService/entities/Service_Framework_Audit__c/objects/Service_Framework_Audit__c/fields/Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Id__c</fullName>
    <description>If interacting with external systems, track the supplied correlation id to track through salesforce</description>
    <externalId>true</externalId>
    <label>Correlation Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>