dxscale/core/services/AuditService/entities/Service_Framework_Audit__c/objects/Service_Framework_Audit__c/fields/Data_Status__c.field-meta.xml
<CustomField>
    <fullName>Data_Status__c</fullName>
    <description>Data Status of the returned output, for example if the data is real or stubbed</description>
    <inlineHelpText>Data Status of the returned output, for example if the data is real or stubbed</inlineHelpText>
    <label>Data Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>