dxscale/core/services/AuditService/entities/Service_Framework_Audit__c/objects/Service_Framework_Audit__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>Service Durationn in milliseconds. This is the time that the service runs for, in the case of an async invocation this does not include any enqueued time but is the time that the service method takes to run</description>
    <inlineHelpText>Service Durationn in milliseconds. This is the time that the service runs for, in the case of an async invocation this does not include any enqueued time but is the time that the service method takes to run</inlineHelpText>
    <label>Service Duration (ms)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>