dxscale/core/services/AuditService/entities/Service_Framework_Audit__c/objects/Service_Framework_Audit__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Service returned Error Message</description>
    <inlineHelpText>Service returned Error Message</inlineHelpText>
    <label>Error Message</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>