dxscale/core/services/AuditService/entities/Service_Framework_Audit__c/objects/Service_Framework_Audit__c/fields/Implementing_Class__c.field-meta.xml
<CustomField>
    <fullName>Implementing_Class__c</fullName>
    <description>Implementing Class that ran the service</description>
    <inlineHelpText>Implementing Class that ran the service</inlineHelpText>
    <label>Implementing Class</label>
    <length>80</length>
    <type>Text</type>
</CustomField>