dxscale/core/services/AuditService/entities/Service_Framework_Audit__c/objects/Service_Framework_Audit__c/fields/Input_Data__c.field-meta.xml
<CustomField>
    <fullName>Input_Data__c</fullName>
    <description>Input Data for an Service Invocation</description>
    <inlineHelpText>Input Data for an Service Invocation</inlineHelpText>
    <label>Input Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>