dxscale/core/services/AuditService/entities/Service_Framework_Audit__c/objects/Service_Framework_Audit__c/fields/Invocation_Details__c.field-meta.xml
<CustomField>
    <fullName>Invocation_Details__c</fullName>
    <description>Invocation Details for a Service Invocation</description>
    <inlineHelpText>Invocation Details for a Service Invocation</inlineHelpText>
    <label>Invocation Details</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>