dxscale/core/services/AuditService/entities/Service_Framework_Audit__c/objects/Service_Framework_Audit__c/fields/Invocation_Duration__c.field-meta.xml
<CustomField>
    <fullName>Invocation_Duration__c</fullName>
    <description>Duration of the service invocation. For asynchronous calls this is the duration from the invocation until the service is invoked, i.e. it includes any enqueued time waiting for the service to run</description>
    <inlineHelpText>Duration of the service invocation. For asynchronous calls this is the duration from the invocation until the service is invoked, i.e. it includes any enqueued time waiting for the service to run</inlineHelpText>
    <label>Invocation Duration (ms)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>