dxscale/core/services/AuditService/entities/Service_Framework_Audit__c/objects/Service_Framework_Audit__c/fields/Invocation_Name__c.field-meta.xml
<CustomField>
    <fullName>Invocation_Name__c</fullName>
    <description>Name fo the invocation that trigger the audited service</description>
    <inlineHelpText>Name fo the invocation that trigger the audited service</inlineHelpText>
    <label>Invocation Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>