dxscale/core/services/AuditService/entities/Service_Framework_Audit__c/objects/Service_Framework_Audit__c/fields/Invocation_Time__c.field-meta.xml
<CustomField>
    <fullName>Invocation_Time__c</fullName>
    <description>Timestamp for the initial invocation call</description>
    <inlineHelpText>Timestamp for the initial invocation call</inlineHelpText>
    <label>Invocation Time</label>
    <type>DateTime</type>
</CustomField>