dxscale/core/services/AuditService/entities/Service_Framework_Audit__c/objects/Service_Framework_Audit__c/fields/Invocation_Type__c.field-meta.xml
<CustomField>
    <fullName>Invocation_Type__c</fullName>
    <description>Invocation Type of the Audited invocation</description>
    <inlineHelpText>Invocation Type of the Audited invocation</inlineHelpText>
    <label>Invocation Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>