dxscale/core/services/AuditService/entities/Service_Framework_Audit__c/objects/Service_Framework_Audit__c/fields/Iteration__c.field-meta.xml
<CustomField>
    <fullName>Iteration__c</fullName>
    <description>Iteration that was triggered</description>
    <inlineHelpText>Iteration that was triggered</inlineHelpText>
    <label>Iteration</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>