dxscale/core/services/AuditService/entities/Service_Framework_Audit__c/objects/Service_Framework_Audit__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <description>Method on the Service that was invoked</description>
    <inlineHelpText>Method on the Service that was invoked</inlineHelpText>
    <label>Method</label>
    <length>40</length>
    <type>Text</type>
</CustomField>