dxscale/core/services/AuditService/entities/Service_Framework_Audit__c/objects/Service_Framework_Audit__c/fields/Output_Data__c.field-meta.xml
<CustomField>
    <fullName>Output_Data__c</fullName>
    <description>Output Data for an Service Invocation</description>
    <inlineHelpText>Output Data for an Service Invocation</inlineHelpText>
    <label>Output Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>