dxscale/core/services/AuditService/entities/Service_Framework_Audit__c/objects/Service_Framework_Audit__c/fields/Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Response_Time__c</fullName>
    <description>Time that the Service completed its processing</description>
    <inlineHelpText>Time that the Service completed its processing</inlineHelpText>
    <label>Response Time</label>
    <type>DateTime</type>
</CustomField>