dxscale/core/services/AuditService/entities/Service_Framework_Audit__c/objects/Service_Framework_Audit__c/fields/Service_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Name__c</fullName>
    <description>Name of the Service that was invoked</description>
    <inlineHelpText>Name of the Service that was invoked</inlineHelpText>
    <label>Service Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>