dxscale/core/services/AuditService/entities/Service_Framework_Audit__c/objects/Service_Framework_Audit__c/fields/Service_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Service_Start_Time__c</fullName>
    <description>Time the service starts to run. For an async invocation this is after the service call is dequeued from the Platform Event</description>
    <inlineHelpText>Time the service starts to run. For an async invocation this is after the service call is dequeued from the Platform Event</inlineHelpText>
    <label>Service Start Time</label>
    <type>DateTime</type>
</CustomField>