dxscale/core/services/AuditService/entities/Service_Framework_Audit__c/objects/Service_Framework_Audit__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Service return state</description>
    <inlineHelpText>Service return state</inlineHelpText>
    <label>State</label>
    <length>40</length>
    <type>Text</type>
</CustomField>