dxscale/core/services/AuditService/entities/Service_Framework_Audit__c/objects/Service_Framework_Audit__c/listViews/Audit_Full.listView-meta.xml
<ListView>
    <fullName>Audit_Full</fullName>
    <columns>NAME</columns>
    <columns>Invocation_Name__c</columns>
    <columns>Service_Name__c</columns>
    <columns>State__c</columns>
    <columns>Duration__c</columns>
    <columns>Implementing_Class__c</columns>
    <columns>Input_Data__c</columns>
    <filterScope>Everything</filterScope>
    <label>Audit Full</label>
</ListView>