dxscale/core/services/AuditService/entities/Service_Framework_Audit__c/objects/Service_Framework_Audit__c/listViews/LAST_WEEK.listView-meta.xml
<ListView>
    <fullName>LAST_WEEK</fullName>
    <columns>NAME</columns>
    <columns>Correlation_Id__c</columns>
    <columns>State__c</columns>
    <columns>Invocation_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Service_Name__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Invocation_Duration__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>Last 7 Days</label>
</ListView>